sort.basic.bubble.AlgBubbleSort3.scala.error
Erreur de compilation :
AlgBubbleSort3:2: error: Missing closing brace `}' assumed here
var echange = true
^AlgBubbleSort3:2: error: expected class or object definition
var echange = true
^AlgBubbleSort3:4: error: expected class or object definition
def bubbleSort3()  {
^