sort.basic.bubble.AlgBubbleSort3.scala.code
var echange = true

def bubbleSort3()  {
  for(i <- 0 to getNombreValeurs()-2){
    for(j <- 0 to getNombreValeurs()-2-i){
      if(plusPetit(j+1,j)){
      	echange(j,j+1) 
        echange=false 
      
      	
        
      	
    }
    if(echange==true)
    	return
  }
}